6_resilience/deployment-timeout/vs-delay-leaf2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leaf2-vs
spec:
  hosts:
    - leaf2
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 0.2s
    route:
    - destination:
        host: leaf2
        port:
          number: 8080
