6_resilience/deployment-timeout/vs-removedelay-leaf1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leaf1-vs
spec:
  hosts:
    - leaf1
  http:
    - route:
        - destination:
            host: leaf1
            port:
              number: 8080
